[package]
name = "map_reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10.0"
libc = "0.2.139"
nix = "0.18.0"
